# color-picker

./: Cargo.toml  README.md  build.rs
data/: color_codes.json  colors.json
src/: main.rs  slintutils.rs
src/slintutils/: strings.rs
ui/components/: numberpad.slint  operatorpad.slint  rbutton.slint  rbuttonbar.slint  rcheckbox.slint  rcombobox.slint  rdialog.slint  redit.slint  rwindow.slint
ui/forms/: appwindow.slint
ui/standard/: common.slint  strings.slint
