[package]
name = "color-picker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
serde = { version = "1.0.210", features = ["alloc", "derive"] }
serde_json = { version = "1.0.128", features = ["alloc"] }
slint = "1.8.0"

[build-dependencies]
slint-build = "1.8.0"
